# python-pdf-rename-cli

./: .gitignore  README.md  justfile  pyproject.toml
src/pdf_renamer/: __init__.py  __main__.py  lookup.py  metadata.py  renamer.py
tests/: test_file_selection.py  test_integration.py  test_renamer.py
